--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,9 +3,12 @@
 	src: url('/fonts/RobotoFlex-VariableFont_GRAD,XTRA,YOPQ,YTAS,YTDE,YTFI,YTLC,YTUC,opsz,slnt,wdth,wght.ttf');
 }
 
-html, body { @apply h-full overflow-hidden; }
+html,
+body {
+	@apply h-full overflow-hidden;
+}
 
 :root {
-    --theme-font-family-base: 'RobotoFlex', sans-serif;
-    --theme-font-family-heading: 'RobotoFlex', sans-serif;
+	--theme-font-family-base: 'RobotoFlex', sans-serif;
+	--theme-font-family-heading: 'RobotoFlex', sans-serif;
 }
