Basic layout and Firebase setup (#3)
* Add code Linter action

* Add assets submodule

* Add side menu to layout

* Add Firebase wrapper

* Add Google login

* Add plants page and other changes

* Consolidate Firebase imports

* Add PlantCard component and type

* Fix references

* Add plant details page

* Update plant details page

* Add href to plant card

* Convert timestamp to date

* Fix current url store

* Fix current url store for add plant route

* Moved logic to store

* Fixed some lint problems

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,2 +1,14 @@
-/*place global styles here */
-html, body { @apply h-full overflow-hidden; }
+@font-face {
+	font-family: 'RobotoFlex';
+	src: url('/fonts/RobotoFlex-VariableFont_GRAD,XTRA,YOPQ,YTAS,YTDE,YTFI,YTLC,YTUC,opsz,slnt,wdth,wght.ttf');
+}
+
+html,
+body {
+	@apply h-full overflow-hidden;
+}
+
+:root {
+	--theme-font-family-base: 'RobotoFlex', sans-serif;
+	--theme-font-family-heading: 'RobotoFlex', sans-serif;
+}
