--- a/src/app.postcss
+++ b/src/app.postcss
@@ -12,3 +12,13 @@ body {
 	--theme-font-family-base: 'RobotoFlex', sans-serif;
 	--theme-font-family-heading: 'RobotoFlex', sans-serif;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
